fixed all the weird spacing issues.

--- a/app/assets/stylesheets/_chat_area.sass
+++ b/app/assets/stylesheets/_chat_area.sass
@@ -1,6 +1,7 @@
 #channels
-  margin-top: 0px
+  margin-top: 12px
   overflow: hidden
+  height: 105%
 
 .ui-widget-header
   background: transparent !important
@@ -110,7 +111,7 @@ html body .ui-tabs .ui-tabs-nav li
   background: #FFF
   padding: 10px
   min-height: 110%
-  padding-bottom: 70px
+  padding-bottom: 0px
   .pagination
     text-decoration: underline
     cursor: pointer
@@ -145,8 +146,8 @@ html body .ui-tabs .ui-tabs-panel, html body #app_body .main-area #mask_containe
 html body #app_body .main-area #head-mask
   min-height: 0 !important
   padding-bottom: 0px !important
-  height: 20px
-  +box-shadow(0px 10px 5px -3px #FFFFFF, 0px 7px 4px -3px #FFFFFF, 6px 3px 3px -3px #cccccc, -5px 3px 5px -2px #cccccc)
+  height: 35px
+  +box-shadow(0px 5px 0px 0px #FFFFFF, 0px 5px 0px 0px #FFFFFF, 6px 3px 3px -3px #cccccc, -5px 3px 5px -2px #cccccc)
 
 /* html body .ui-tabs .ui-tabs-panel
 /*   padding: 0px !important
